<resources>
    <string name="app_name">MEC Wheel</string>
    <string name="search_title">Search</string>

    <string name="chc_label">Combined hormonal methods (pills, patch, ring)</string>
    <string name="pop_label">Progestin-only pills (POPs)</string>
    <string name="dmpa_label">DMPA</string>
    <string name="implants_label">Implants</string>
    <string name="lngiud_label">LNG-IUD</string>
    <string name="cuiud_label">Copper IUD</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <string name="search_hint">Condition name</string>

    <string name="about_text">About</string>
    <string name="license_agreement_text">License Agreement</string>
    <string name="support_text">Support</string>
    <string name="left_arrow">←</string>
    <string name="right_arrow">→</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_eula">User License Agreement</string>
    <string name="nav_support">Support</string>
    <string name="initiation">Initiation</string>
    <string name="continuation">Continuation</string>
    <string name="search_no_results">No results found</string>
    <string name="key_1_text">Use the method in any circumstance</string>
    <string name="key_1_label">1</string>
    <string name="key_2_label">2</string>
    <string name="key_2_text">Generally uses the method</string>
    <string name="key_3_label">3</string>
    <string name="key_3_text">Use of the method not usually recommended unless other, more appropriate methods are not available or acceptable</string>
    <string name="key_4_label">4</string>
    <string name="key_4_text">Method NOT to be used</string>
</resources>
