<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/conditionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <include
            layout="@layout/initiation_continuation_control"
            android:id="@+id/initiation_continuation_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        />

        <View
            android:id="@+id/chcBackground"
            android:background="@color/colorLight"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="@+id/chc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
        />

        <TextView
            android:id="@+id/chc"
            android:text="@string/chc_label"
            android:textSize="16sp"
            android:layout_height="50dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="0dp"
            android:textAlignment="textEnd"
            android:gravity="center_vertical|end"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/initiation_continuation_control"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/chcRating"
            app:layout_constraintHorizontal_weight="3"
        />

        <TextView
            android:id="@+id/ratingExample"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/chc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chc"
            />

        <TextSwitcher
            android:id="@+id/chcRating"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="?selectableItemBackground"
            android:gravity="center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/chc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chc"
            app:layout_constraintBottom_toBottomOf="@+id/chc"
        />


        <View
            android:id="@+id/popRatingBackground"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pop"
        />

        <TextView
            android:id="@+id/pop"
            android:text="@string/pop_label"
            android:textSize="16sp"
            android:layout_height="50dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="0dp"
            android:textAlignment="textEnd"
            android:gravity="center_vertical|end"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            app:layout_constraintRight_toLeftOf="@+id/popRating"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chc"
            app:layout_constraintHorizontal_weight="3"
        />


        <TextSwitcher
            android:id="@+id/popRating"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/pop"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pop"
        />

        <View
            android:id="@+id/dmpaRatingBackground"
            android:background="@color/colorLight"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dmpa"
        />

        <TextView
            android:id="@+id/dmpa"
            android:text="@string/dmpa_label"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="textEnd"
            android:gravity="center_vertical|end"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/dmpaRating"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintTop_toBottomOf="@+id/pop"
        />


        <TextSwitcher
            android:id="@+id/dmpaRating"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="?selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/dmpa"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="@+id/dmpa"
        />

        <View
            android:id="@+id/implantsRatingBackground"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/implants"
        />

        <TextView
            android:id="@+id/implants"
            android:text="@string/implants_label"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="textEnd"
            android:gravity="center_vertical|end"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/implantsRating"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintTop_toBottomOf="@+id/dmpa"
        />


        <TextSwitcher
            android:id="@+id/implantsRating"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="?selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/implants"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="@+id/implants"
        />

        <View
            android:id="@+id/lngiudRatingBackground"
            android:background="@color/colorLight"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lngiud"
        />

        <TextView
            android:id="@+id/lngiud"
            android:text="@string/lngiud_label"
            android:textSize="16sp"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="textEnd"
            android:gravity="center_vertical|end"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/lngiudRating"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintTop_toBottomOf="@+id/implants"
        />


        <TextSwitcher
            android:id="@+id/lngiudRating"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="?selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/lngiud"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="@+id/lngiud"
        />

        <View
            android:id="@+id/cuiudRatingBackground"
            android:background="@color/colorAccent"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cuiud"
        />

        <TextView
            android:id="@+id/cuiud"
            android:text="@string/cuiud_label"
            android:textSize="16sp"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="textEnd"
            android:gravity="center_vertical|end"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/cuiudRating"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintTop_toBottomOf="@+id/lngiud"
        />

        <TextSwitcher
            android:id="@+id/cuiudRating"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:background="?selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/cuiud"
            app:layout_constraintTop_toTopOf="@+id/cuiud"
            app:layout_constraintHorizontal_weight="1"
        />

        <TextView
            android:id="@+id/conditionNotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:background="@color/colorLight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cuiud"
        />

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorLight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conditionNotes"
        >

            <TextView
                android:id="@+id/key_1_label"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="@string/key_1_label"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/key_1_text"
                app:layout_constraintBottom_toBottomOf="@+id/key_1_text"
            />

            <TextView
                android:id="@+id/key_1_text"
                android:text="@string/key_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/key_1_label"
                app:layout_constraintTop_toTopOf="parent"
            />

            <TextView
                android:id="@+id/key_2_label"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="@string/key_2_label"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/key_2_text"
                app:layout_constraintBottom_toBottomOf="@+id/key_2_text"
            />

            <TextView
                android:id="@+id/key_2_text"
                android:text="@string/key_2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/key_2_label"
                app:layout_constraintTop_toBottomOf="@+id/key_1_text"
            />

            <TextView
                android:id="@+id/key_3_label"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="@string/key_3_label"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/key_3_text"
                app:layout_constraintBottom_toBottomOf="@+id/key_3_text"
            />

            <TextView
                android:id="@+id/key_3_text"
                android:text="@string/key_3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/key_3_label"
                app:layout_constraintTop_toBottomOf="@+id/key_2_text"
            />

            <TextView
                android:id="@+id/key_4_label"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="@string/key_4_label"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/key_4_text"
                app:layout_constraintBottom_toBottomOf="@+id/key_4_text"
            />

            <TextView
                android:id="@+id/key_4_text"
                android:text="@string/key_4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintLeft_toRightOf="@+id/key_4_label"
                app:layout_constraintTop_toBottomOf="@+id/key_3_text"
            />

        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>
